# ansible-argspec-gen

./: .gitignore  Makefile  Pipfile  README.rst  setup.cfg
src/ansible_argspec_gen/: cli.py  utils.py
