[metadata]
name = ansible-argspec-gen
author = XLAB Steampunk
author_email = steampunk@xlab.si
license_file = LICENSE
description = Generate Ansible argument specification from API docs
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = ansible, development
classifiers =
  Development Status :: 2 - Pre-Alpha
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8

[options]
package_dir =
  = src
packages = find:
zip_safe = True
include_package_data = True
setup_requires =
  setuptools_scm
install_requires =
  black

[options.extras_require]
ansible = ansible
base = ansible-base

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  ansible-argspec-gen = ansible_argspec_gen.cli:main
